--- a/shared/css/customized.css
+++ b/shared/css/customized.css
@@ -1,3 +1,17 @@
+/*Quicksand?*/
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic);
+
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  font-family: "Merriweather", Impact, sans-serif;
+  text-transform: none;
+}
+
+
 table.authors-contact td {
   text-align: center;
 }
